--- a/pp-01/index.html
+++ b/pp-01/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+  <script src="http://code.jquery.com/jquery-2.2.4.min.js"></script>
   <script src="site.js"></script>
 </body>
 </html>
