Add basic form structure

--- a/pp-01/index.html
+++ b/pp-01/index.html
@@ -7,6 +7,21 @@
   <link rel="stylesheet" media="screen" href="screen.css" />
 </head>
 <body>
+  <main>
+    <form action="#null" method="get">
+      <ol>
+        <li>
+          <input type="email" name="email" id="form-email" placeholder="example@domain.com" />
+        </li>
+        <li>
+          <input type="tel" name="tel" id="form-tel" placeholder="(###)###-####" />
+        </li>
+        <li>
+          <input type="date" name="date" id="form-date" />
+        </li>
+      </ol>
+    </form>
+  </main>
 
   <script src="http://code.jquery.com/jquery-2.2.4.min.js"></script>
   <script src="site.js"></script>
