Add form labels

--- a/pp-01/index.html
+++ b/pp-01/index.html
@@ -11,12 +11,15 @@
     <form action="#null" method="get">
       <ol>
         <li>
+          <label for="form-email">Email</label>
           <input type="email" name="email" id="form-email" placeholder="example@domain.com" />
         </li>
         <li>
+          <label for="form-tel">Telephone</label>
           <input type="tel" name="tel" id="form-tel" placeholder="(###)###-####" />
         </li>
         <li>
+          <label for="form-date">Date</label>
           <input type="date" name="date" id="form-date" />
         </li>
       </ol>
