Add id to form; add basic form submit handler

--- a/pp-01/index.html
+++ b/pp-01/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <main>
-    <form action="#null" method="get">
+    <form action="#null" method="get" id="contact-form">
       <ol>
         <li>
           <label for="form-email">Email</label>
