Add submit button to form

--- a/pp-01/index.html
+++ b/pp-01/index.html
@@ -22,6 +22,9 @@
           <label for="form-date">Date</label>
           <input type="date" name="date" id="form-date" />
         </li>
+        <li>
+          <input type="submit" value="Submit" />
+        </li>
       </ol>
     </form>
   </main>
