--- a/pp-01/index.html
+++ b/pp-01/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" media="screen" href="screen.css" />
 </head>
 <body>
-  <main>
+  <main id="content">
     <form action="#null" method="get" id="contact-form">
       <ol>
         <li>
